# interpreter-from-scratch

./: Taskfile.yml  pyproject.toml
interpreter/: ast.py  environment.py  eva.py  interpreter.py  lexer.py  parser.py  token.py
test/interpreter/: test_block.py  test_eva.py  test_interpreter.py  test_math.py  test_self_eval.py  test_token.py  test_vars.py
tests/interpreter/: test_ast.py  test_interpreter.py  test_lexer.py  test_parser.py
